--- a/src/home.html
+++ b/src/home.html
@@ -4,5 +4,20 @@
 }
 
 <main>
-	
+	<div class="pageHome">
+		<div class="homeHorse">
+			<div class="photo">
+				<img src="img/home1.jpg" alt="" />	
+			</div>
+			<div class="tag">
+				<div class="name">Kavalle MI</div>
+				<div class="parents">(gazal al shaqab  x  karess)</div>
+			</div>
+		</div>
+		<h1 class="homeLogo"><span>JR's Dream arabians</span></h1>
+		<div class="homeText formattedContent">
+			<p>Nunc finibus mauris odio, in egestas nunc cursus vel. Pellentesque id faucibus nunc. Donec finibus nisi sed enim viverra dictum. Mauris accumsan suscipit congue. Fusce vel nisl est. Sed tempus lacinia nulla non scelerisque. Phasellus feugiat mi ac tellus porta, sed efficitur elit dapibus. Mauris convallis ultrices arcu, id lacinia sem ornare id. Pellentesque suscipit, nibh id volutpat bibendum, urna ex consectetur orci, vel suscipit mi urna eget lectus. Nulla auctor felis vel accumsan lobortis. Vestibulum sed risus vel nisi pulvinar congue.</p>
+			<p>Fusce vel nisl est. Sed tempus lacinia nulla non scelerisque. Phasellus feugiat mi ac tellus porta, sed efficitur elit dapibus. Mauris convallis ultrices arcu, id lacinia sem ornare id. Pellentesque suscipit, nibh id volutpat bibendum, urna ex consectetur orci, vel suscipit mi urna eget lectus. Nulla auctor felis vel accumsan lobortis. Vestibulum sed risus vel nisi pulvinar congue.</p>
+		</div>
+	</div>
 </main>
